Change personal information

--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ avatar:
 footer-links:
   dribbble:
   email:
-  facebook: https://www.facebook.com/alpgus
+  facebook: alpgus
   flickr:
-  github: https://github.com/alexgoussev
+  github: alexgoussev
   instagram:
   linkedin:
   pinterest:
